<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="a_and_b">A^B</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="description">Conjunction (AND)</string>
    <string name="submit">SUBMIT</string>
    <string name="amount">Amount of correct answers %d</string>
</resources>